Enforce build encoding

--- a/pom.xml
+++ b/pom.xml
@@ -33,9 +33,14 @@
         <developerConnection>scm:git:git@github.com:ylegat/uncheck.git</developerConnection>
     </scm>
 
-    <dependencies>
+    <properties>
+        <encoding>UTF-8</encoding>
+        <java.version>1.8</java.version>
+        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>
+    </properties>
 
-        <!--TESTS-->
+    <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
